finish register and login routes

--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-H7R01GL\\SQLEXPRESS;Initial Catalog=app;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyForAuthenticationOfApplication",
+    "Issuer": "youtCompanyIssuer.com"
+  },
   "AllowedHosts": "*"
 }
